--- a/timetable.tex
+++ b/timetable.tex
@@ -11,14 +11,27 @@
 
 \begin{document}
 \section*{Brief project description}
-The idea of the project is the following: We will create an agent that learns to control an arm in environment A (say, the real world carrying nothing), and learns how to control the arm in environment B (say, with high winds). The agent then learns to recognize environments A and B and to deploy the right controller for each environment depending on this recognition.
+In this chapter, I describe the everything related to the paper that should come
+out of this project, including modeling and experimental findings, as well as
+the direction of the paper and things needed to get there.
 
-We will argue that this is how humans do it and present evidence (based on literature research) for the predictions this model makes, as well as try to make new predictions.
+\section{Project description}
+The idea of the project is the following: We will create an agent that learns to
+control an arm in environment A (say, the real world carrying nothing), and
+learns how to control the arm in environment B (say, with high winds). The agent
+then learns to recognize environments A and B and to deploy the right controller
+for each environment depending on this recognition.
 
-After this methods paper is done, model validation can be carried out in future studies.
+We will argue that this is how humans do it and present evidence (based on
+literature research) for the predictions this model makes, as well as try to
+make new predictions.
 
+After this methods paper is done, model validation can be carried out in future
+studies.
 
-\section*{Time plan for the arm movement project.}
+\section{Planning}
+Here I enumerate the things I need to learn and do in order to get this project
+moving and to finish it.
 
 \begin{tabularx}{\textwidth}{
   l|
@@ -27,7 +40,7 @@ After this methods paper is done, model validation can be carried out in future 
   >{\hsize=.2\hsize\linewidth=\hsize}X}
 % {l|{\hsize=.4\hsize}X|{\hsize=0.3\hsize}X|{\hsize=0.3\hsize}X}
 End Date & Milestone & A priori comments & A posteriori comments \\ \hline \hline
-12.02.2021 & Learn about published models on arm-movement planning, especially those that can be used as generative models & & \\ \hline
+12.02.2021 & Learn about published models on arm-movement planning, especially those that can be used as generative models & & Discovered low-hanging fruit. Shifting directions a bit. See \ref{subsec:proposal}\\ \hline
 19.02.2021 & Learn about measures for how practiced a movement is. Reaction times? Speed profiles? Trajectories? & & \\\hline
 12.03.2021 & Implement the best model/s and do some testing as to its capabilities. & Without inference &   \\ \hline
 19.03.2021 & Add the sequential goals as another level in the hierarchy. & Still no inference. & \\ \hline
@@ -37,21 +50,32 @@ End Date & Milestone & A priori comments & A posteriori comments \\ \hline \hlin
 
 \end{tabularx}
 
-\section*{Time plan for the motor adaptation project.}
 
 The previous time table was interrupted by the possibility of the new project. Now that this new project has taken shape, this new time table applies:
 
-\noindent
 \begin{tabularx}{\textwidth}{
   l|
-  >{\hsize=.4\hsize\linewidth=\hsize}X|
-  >{\hsize=.2\hsize\linewidth=\hsize}X|
-  >{\hsize=.2\hsize\linewidth=\hsize}X}
+  >{\hsize=0.4\hsize\linewidth=\hsize}X|
+  >{\hsize=0.2\hsize\linewidth=\hsize}X|
+  >{\hsize=0.2\hsize\linewidth=\hsize}X}
 End Date & Result & A priori comments & A posteriori comments \\ \hline \hline
-30.04.2021 & Lit. research on savings and deadaptation & Are there many with contextual cues? & \\ \hline
+30.04.2021 & Lit. research on savings and deadaptation & Are there many with contextual cues? & I found a lot of evidence. Moving on.\\ \hline
 07.05.2021 & Finding model pars to explain observations & This is mostly already done &  \\\hline
 14.05.2021 & Looking into error-clamp behavior & Maybe there's something to it. If there is, an extra week should be allocated to simulations. &  \\\hline
 --- & Start writing the paper. & & \\ \hline
+
 \end{tabularx}
+\section{Results}
+
+\begin{enumerate}
+\item Quick de-adaptation/savings: gradual evidence accumulation during context inference will make the switching between internal models not be immediate.
+\item Learning: The speed in which the internal models are adjusted given errors depends on how certain the inference is. More uncertain context inference will lead to slower learning.
+\item Action selection: Action selection is sampled from the existing (relevant) internal models, weighted by their posterior probability during this trial.
+\item Cue reliability adjustments: As more bad-cue trials are observed, the agent will lower the estimated reliability of the cue.
+\item Error-clamp tappering off: Hundreds of error-clamp trials make adaptation seem to slowly disappear, but it never fully goes away.
+\item Error-clamp lag: For a while, the tappering off does not begin, depending on how clear it is that error-clamp trials have started.
+\end{enumerate}
+
+
 
 \end{document}
