--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -147,14 +147,15 @@ The previous time table was interrupted by the possibility of the new project. N
   >{\hsize=0.2\hsize\linewidth=\hsize}X}
 End Date & Result & A priori comments & A posteriori comments \\ \hline \hline
 30.04.2021 & Lit. research on savings and deadaptation & Are there many with contextual cues? & I found a lot of evidence. Moving on.\\ \hline
-07.05.2021 & Finding model pars to explain observations & This is mostly already done &  \\\hline
-14.05.2021 & Looking into error-clamp behavior & Maybe there's something to it. If there is, an extra week should be allocated to simulations. &  \\\hline
---- & Start writing the paper. & & \\ \hline
+07.05.2021 & Finding model pars to explain observations & This is mostly already done &  Parameters found\\\hline
+14.05.2021 & Looking into error-clamp behavior & Maybe there's something to it. If there is, an extra week should be allocated to simulations. & I found a lot of evidence for context-inference-based motor adaptation. It will be incorporated into the paper. \\\hline
+23.06.2021 & Looking into single-cell recordings. & Perhaps I can find evidence here. & Evidence seems dubiuous, but might be worth including in Discussion \\
+--- & Start writing the paper. & & This was delayed by the defense and dysco. Restarted around 24.06.2021 \\ \hline
 
 \end{tabularx}
 
 \section{Results}
-
+Possible results to include in the paper:
 \begin{enumerate}
 \item Quick de-adaptation/savings: gradual evidence accumulation during context inference will make the switching between internal models not be immediate.
 \item Learning: The speed in which the internal models are adjusted given errors depends on how certain the inference is. More uncertain context inference will lead to slower learning.
