--- a/timetable.tex
+++ b/timetable.tex
@@ -61,7 +61,7 @@ End Date & Result & A priori comments & A posteriori comments \\ \hline \hline
 30.04.2021 & Lit. research on savings and deadaptation & Are there many with contextual cues? & I found a lot of evidence. Moving on.\\ \hline
 07.05.2021 & Finding model pars to explain observations & This is mostly already done &  Parameters found\\\hline
 14.05.2021 & Looking into error-clamp behavior & Maybe there's something to it. If there is, an extra week should be allocated to simulations. & I found a lot of evidence for context-inference-based motor adaptation. It will be incorporated into the paper. \\\hline
-23.06.2021 & Looking into single-cell recordings. & Perhaps I can find evidence here. & Evidence seems dubiuous, but might be worth including in Discussion \\ \hline
+23.06.2021 & Looking into single-cell recordings. & Perhaps I can find evidence here. & Evidence seems dubious, but might be worth including in Discussion \\ \hline
 --- & Start writing the paper. & & This was delayed by the defense and dysco. Restarted around 24.06.2021 \\ \hline
 
 \end{tabularx}
@@ -73,8 +73,8 @@ Possible results to include in the paper:
 \item Learning: The speed in which the internal models are adjusted given errors depends on how certain the inference is. More uncertain context inference will lead to slower learning.
 \item Action selection: Action selection is sampled from the existing (relevant) internal models, weighted by their posterior probability during this trial.
 \item Cue reliability adjustments: As more bad-cue trials are observed, the agent will lower the estimated reliability of the cue.
-\item Error-clamp tappering off: Hundreds of error-clamp trials make adaptation seem to slowly disappear, but it never fully goes away.
-\item Error-clamp lag: For a while, the tappering off does not begin, depending on how clear it is that error-clamp trials have started.
+\item Error-clamp tapering off: Hundreds of error-clamp trials make adaptation seem to slowly disappear, but it never fully goes away.
+\item Error-clamp lag: For a while, the tapering off does not begin, depending on how clear it is that error-clamp trials have started.
 \end{enumerate}
 
 
