--- a/article/article.tex
+++ b/article/article.tex
@@ -74,7 +74,7 @@ As a day progresses, and especially if the day included a lot of physical activi
 \begin{equation}
 q(\beta | \vartheta, s, c) \propto p(\vartheta | s, c, \beta)p(\beta)
 \end{equation}
-where $q(\beta | ...)$ represents the new estimate of $\beta$ after having observed the outcome $\vartheta$ of the previous motor command $c$. $p(\vartheta | s, c, \beta)$ is the \textit{a priori} probability of observing the outcome $\vartheta$ as predicted by the forward model $f$.
+where $q(\beta | ...)$ represents the new estimate of $\beta$ after having observed the outcome $\vartheta$ of the previous motor command $c$. $p(\vartheta | s, c, \beta)$ is the \textit{a priori} probability of observing the outcome $\vartheta$ as predicted by the forward model $f$, and $p(\beta$ is the previous estimate of $\beta$.
 
 In this account of motor adaptation, the prediction error signal takes the form of an observed outcome $\vartheta$ that differs from that of the most likely outcome predicted by the forward model. The amount of adaptation that happens after observing an error will depend not only on the size of the error (how far away from the most likely outcome) it is, but also of how precise the existing estimate of $\beta$ is. We will discuss this further below.
 
@@ -93,7 +93,8 @@ where the prior distribution over contexts $p(\zeta)$ includes information from 
 
 In the previous section, we used the variable $\vartheta$ to refer to the outcomes of actions. In this section, we expand the definition of an observation $\vartheta$ to include any information given to the decision-making agent by the environment. This includes, as before, the outcomes of actions, but also any other sensory information that might be indirectly related to actions, or even completely intependent from them. For this section, the most important component of $\vartheta$ is contextual information, i.e. information that might directly help infer the identity of the current context.
 
-In experimental settings, the contextual information can take the form of a visual cue [EGS], the place where the task must be carried out [EGS] or even the start of a new block of trials [EGS]. All these sources of information, alongside the outcomes of previous actions and the priors $p(\vartheta$ form part of $p(\vartheta_t | \vartheta_{t-1}, c_{t-1})$ and are integrated together to identify a context.
+In experimental settings, the contextual information can take the form of a visual cue [EGS], the place where the task must be carried out [EGS] or even the start of a new block of trials [EGS]. All these sources of information, alongside the outcomes of previous actions and the priors $p(\vartheta$ form part of $p(\vartheta_t | \vartheta_{t-1
+}, c_{t-1})$ and are integrated together to identify a context.
 
 \subsection{Action selection}
 Action selection is affected by the current context via the context-dependent forward model that is used. In our model, action selection is made by building a distribution over available actions which is a weighted sum of the distributions given by the existing forward models, where the weights are obtained by the context inference component of the model. In other words, a distribution is created as follows:
@@ -107,12 +108,12 @@ In this section, we go through a number of experimentally-observed phenomena and
 
 In what follows, we show numerical results obtained the model outlined above. The full mathematical implementation of the model can be found in XXX.
 
-Before discussing these phenomena, let us introduce terminology. As an example, we will use a typical motor adaptation task in which participants have to make forward-backward reaching movements while holding the handle of a mechanical arm that exerts a force. Depending on the trial (and experiment), the arm might exert a curl force in a clockwise or counter-clockwise direction, or no force at all. Let us define the baseline context O as that in which the mechanical arm exerts no force. Context A can be defined as that in which the arm exerts the clockwise curl force and context B counter-clockwise. Additionally, abusing notation, it can be said that $B = (-A)$, as the forces point (approximately) in opposite directions. Finally, we represent error-clamp trials with the letter E.
+Before discussing these phenomena, let us introduce terminology. As an example, we will use a typical motor adaptation task in which participants have to make forward-backward reaching movements while holding the handle of a mechanical arm that exerts a force. Depending on the trial (and experiment), the arm might exert a curl force in a clockwise or counter-clockwise direction, or no force at all. Let us define the baseline context O as that in which the mechanical arm exerts no force. Context A can be defined as that in which the arm exerts the clockwise curl force and context B counter-clockwise. Additionally, abusing notation, it can be said that $B = (-A)$, as the forces point (approximately) in opposite directions. We represent contexts such as A and A/2, which means that both have the same direction of the adaptation (e.g. clockwise), but the second one has half the magnitude. Finally, we represent error-clamp trials with the letter E.
 
 With this terminology, a typical experiment [EG] would have a block structure of O-A-B-E (or O-A-(-A)-E), which means that the participant goes through a block of trials with no external force applied (O), a number of trials with a clockwise curl force (A), a block with counter-clockwise forces, and finally a block with error-clamp trials.
 
 \subsection{Savings and quick de-adaptation}
-Savings refers to the ability of humans and other animals to remember a previously-learned adaptation, and apply it without having to re-learn it. Savings is almost-universally observed in human participants [A THOUSAND CITATIONS; c.f. that one paper with single-internal-model], but animal experiments have shown mixed results [EG].
+Savings refers to the ability of humans and other animals to remember a previously-learned adaptation, and apply it without having to re-learn it. Savings is almost-universally observed in human participants [A THOUSAND CITATIONS; c.f. that one paper with single-internal-model], but animal experiments have shown mixed results \citep[e.g.][]{Kojima_Memory_2004}.
 
 In an O-A-O-A experiment, for example, savings would be seen in the second A block in the form of an apparent adaptation rate might higher than that observed during the first A block.
 
@@ -142,15 +143,40 @@ The most direct evidence for the effects of context inference on the rate of ada
 
 To account for volatility, the model includes a term in context inference which assumes a transition from the previous context to all other possible contexts (see Methods). Effectively, this transition term gives the model uncertainty on the current context, regardless of observations. The higher the volatility, the higher the uncertainty.
 
+While we focused on \cite{Herzfeld_memory_2014}, evidence for this can be seen in other studies, which we discuss in the Discussion section.
+
 \section{Action selection}
-As with learning, our model selects actions (motor commands) based on context inference. Is the identity of the current context is known, the forward model for this context is used to select the current action. However, if some uncertainty exists, the selected action is influenced by all the possible current contexts, with a weight directly related to how likely each one of those contexts is.
+As with learning, our model selects actions (motor commands) based on context inference. If the identity of the current context is known, the forward model for this context is used to select the current action. However, if some uncertainty exists, the selected action is influenced by all the possible current contexts, with a weight directly related to how likely each one of those contexts is.
+
+Experimental evidence supporting this view can be found in experiments with context switching. For example, \cite{Davidson_Scaling_2004} reported an experiment in which participants had to switch from 3A to A in one group, with a block sequence A-3A-A-3A, and from -A to A in another group (where -A refers to an adaptation in the opposite direction, but with the same magnitude), with a block sequence A-(-A)-A-(-A), keeping the size of the necessary adaptation equal across both groups. After A and 3A in one group, A and -A in the other, had been learned in the first two blocks, the authors found that the switch from 3A to A was faster than that from -A to A. The authors interpreted this as evidence that a new adaptation happens faster if it is in the same direction as the current adaptation (e.g. both counter-clockwise), and slower if they are in the opposite direction (e.g. clockwise to counter-clockwise).
+
+Our model offers a different explanation for the observed results: the assymetry is due to the existance of the baseline context. As discussed above, action selection in our model is done via a weighted avarage:
+\begin{equation}
+p(a_t | s_t) \propto \displaystyle \sum_{m \in M} p(m | s_t, s_{t-1}, a_{t-1}) p(a_t | m)
+\end{equation}
+In experiments without cued contexts, the baseline model $m_O$ has a non-zero probability $p(m | s_t ...)$. When a new block of trials starts (e.g. in the transition from 3A to A), a switch is inferred by the model (given feedback after the first trial) and $m_O$ becomes more likely (given that $m_{3A}$ has been ruled out. Therefore, in these first trials, action selection has a component guided by the baseline model, in which no extra compensatory force is applied, essentially ``pulling'' adaptation towards zero (no compensatory force). In the first group, this initial pull towards zero accelerates the transition towards A, as $3A > A > 0$, but on the second group, it slows down the switch because $A > 0 > -A$.
+
+We simulated data with our model fitting the experimental structure by \cite{Davidson_Scaling_2004}. We show the results in FIGURE XXX, alongside the experimental results from \cite{Davidson_Scaling_2004}. It can be seen that the model provides a good qualitative fit to the data.
+
+The model additionally predicts that the difference in observed switching speed between 3A-A and (-A)-A would disappear in an experiment in which the adaptations do not cross the baseline, i.e. all are positive or all are negative, or in an experiments in which the contexts are clearly cued.
+
+Further evidence can be found during error-clamp blocks in several experiments. We discuss these experiments in the following section. Additionally, we discuss experiments similar to that by \cite{Davidson_Scaling_2004} in the Discussion section.
 
 
+\subsection{Action selection in error-clamp blocks}
+During error-clamp blocks at the end of block sequences, participants' behavior can be described as the display of spontaneous recovery during the early trials of the E block, followed by a slow return to baseline across as many as hundreds of trials. However, the direction of the spontaneous recovery, its length, the delay before it is observed, the speed of the return to baseline and the final asymptote of the adaptation seem to vary greatly depending on the experiment.
 
+In this section, we show how our model can explain these different parameters of behavior by changing the way contextual cues mislead participants' context inference, which in turn influences action selection.
 
-\section{Behavior in error-clamp blocks}
+\cite{Vaswani_Decay_2013} explored in detail human behavior during an error-clamp block in a shooting movement paradigm with a mechanical arm. The authors found that during an E block at the end of each experiment, there was a lag of a few trials (depending on participant) before their motor behavior changed from that of the previous trial. After that, the exerted force slowly dropped towards zero throughout tens of trials, but never reaching values around zero. Participants were divided into four groups, each of which going through a different block sequence: (1) A-E, (2) O-A-E, (3) (-A/2)-A-E, and (4) (-A)-E. No pauses were made during the experiment nor were there any contextual cues, so transitions between blocks were not signaled to participants. However, the mechanical arm used in the experiment provided force-feedback to participants.
 
+In FIGURE XXX, we show the data from \cite{Vaswani_Decay_2013}, where it can be seen that the responses during the E block trials starts to drop towards zero-compensation. Importantly, the observed movements of the groups display the same behavior as that discussed in the previous subsection: The group that only trained in A has the slowest drop towards zero, followed by the group that trained in O-A and finally the group that trained in (-A/2)-A. As before, the existance and training on the baseline context pulls the average adaptation towards zero during the E block, and the existance and training on the (-A/2) block in group 2 pulls the average adaptation even lower (as the adaptation is negative). Finally, group 4, who only saw a negative-adaptation block (-A) has an average adaptation that is negative. We show the simulations with our model in FIGURE XXX, which displays the same behavior as that in the data.
 
+As can be seen in FIGURE XXX, our model also reproduces the lag before the tapering off in the E block starts. In the model, this lag is due to a period in which context inference has not ``caught on'' to the change of context; during this period, behavior remains consistent with that of the previously-observed block, as can be seen in the experimental data as well.
+
+During these error-clamp trials, the natural variability of movements leads to prediction error: during a normal (e.g. A) block, if the participant exerts less force than necessary by mistake, she observes a motor error which, if the adaptation is complete, produces no prediction error. However, in E trials, no error is observed, which leads to prediction error. It is this prediction error that lets the participant know that a transition has occurred. \cite{Vaswani_Decay_2013} performed an additional experiment in which they masked this lack of error by introducing artificial variability on the end position of the hand that mimicked that seen in the participant. Because this eliminated the only source of information regarding a switch of context, participants could no longer infer a switch. Consistent with our model, the authors found that no tapering off occured during the E block (see FIGURE XXX).
+
+We further discuss error-clamp trials in the Discussion section.
 
 
 
