--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -131,7 +131,7 @@ Note that, because context inference integrates information from many sources, m
 
 To see the effects of context inference on savings and quick de-adaptation, we contrast the two former types of experiments.
 
-In FIGURE XXX, data from representative experiments from each category are shown. It can be seen that in cued-context experiments, savings take the form of an immediate switch from the adaptation at trial $t$ to that in trial $t-1$, to the level that was learned before. In contrast, in partially-cued experiments, the switch is fast (compared to the initial adaptation), but not immediate. Our model explains this difference via context inference: in the cued-context experiments, context inference relies on the very reliable information of visual cues and the change in context is identified immediately; because of this, the model can re-activate the forward model adequate for the context from the first trial after the change occured. In contrast, in partially-cued experiments, the model needs to accumulate evidence in favor of the correct context throughout a number of trials, and the actions selected by the model are combinations of the actions that correspond to all the possible contexts (we discuss this in the following sections).
+In FIGURE XXX, data from representative experiments from each category are shown. It can be seen that in cued-context experiments \cite[data from][]{Oh_Minimizing_2019}, savings take the form of an immediate switch from the adaptation at trial $t$ to that in trial $t-1$, to the level that was learned before. In contrast, in partially-cued experiments, the switch is fast (compared to the initial adaptation), but not immediate. Our model explains this difference via context inference: in the cued-context experiments, context inference relies on the very reliable information of visual cues and the change in context is identified immediately; because of this, the model can re-activate the forward model adequate for the context from the first trial after the change occured. In contrast, in partially-cued experiments, the model needs to accumulate evidence in favor of the correct context throughout a number of trials, and the actions selected by the model are combinations of the actions that correspond to all the possible contexts (we discuss this in the following sections).
 
 In FIGURE XXX, we show the same effects described above, but in the frame of quick de-adaptation. The explanation for these effects given by the model is the same for savings and quick de-adaptation, namely that the participant slowly accumulates evidence in favor of a switch in context.
 
