--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -930,6 +930,8 @@ discuss: in an experiment where context switches slowly, small changes become
 big evidence. For this reason, their Figure 5B has the same effect as that seen
 in Figure 3.
 
+\cite{Pekny_Protection_2011} talks about this. I should check it out.
+
 
 \section{Notes on implicit vs explicit, and strategies.}
 The idea behind strategies in motor adaptation is simple: participants can be
